# Engine

./: .gitignore  CMakeLists.txt  Engine.sln  README.md
Engine/: CMakeLists.txt
Engine/include/: AnimationController.h  Button.h  ButtonState.h  Component.h  Constants.h  Entity.h  Game.h  GameState.h  MainMenuState.h  MovementComponent.h  Player.h  SpriteRenderer.h  State.h  Transform.h
Engine/include/entities/: Entity.h
Engine/include/states/: GameState.h  State.h
Engine/src/: AnimationController.cpp  Application.cpp  Button.cpp  ButtonState.cpp  Component.cpp  Entity.cpp  Game.cpp  GameState.cpp  MainMenuState.cpp  MovementComponent.cpp  Player.cpp  SpriteRenderer.cpp  State.cpp  Transform.cpp
Engine/src/entities/: Entity.cpp
Engine/src/states/: GameState.cpp  State.cpp
